adding azure info

--- a/roles/retrieve_info/tasks/main.yml
+++ b/roles/retrieve_info/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: loop over all ec2 regins
+- name: loop over all ec2 regions
   ansible.builtin.include_tasks:
     file: retrieve_info.yml
   loop: "{{ ec2_regions }}"
