--- a/roles/retrieve_info_azure/tasks/main.yml
+++ b/roles/retrieve_info_azure/tasks/main.yml
@@ -5,13 +5,13 @@
 #   loop: "{{ ec2_regions }}"
 
 - name: Get facts by tags
-  azure_rm_virtualnetwork_info:
+  azure.azcollection.azure_rm_virtualnetwork_info :
   register: azure_networks
 
 - name: Get facts by tags
   debug:
     msg: "{{ azure_networks }}"
-    
+
 # - name: grab boto version
 #   ansible.builtin.pip:
 #     name: boto3
