--- a/roles/retrieve_info_azure/tasks/main.yml
+++ b/roles/retrieve_info_azure/tasks/main.yml
@@ -3,10 +3,19 @@
 #   ansible.builtin.include_tasks:
 #     file: retrieve_info.yml
 #   loop: "{{ ec2_regions }}"
+- name: do the thing
+  shell: "ls -la /usr/libexec | grep platform-python"
+  register: output 
 
+- name: print the thing 
+  debug:
+    msg: "{{ output }}"
+    
 - name: Get facts by tags
+  connection: local
   azure.azcollection.azure_rm_virtualnetwork_info:
   register: azure_networks
+  delegate_to: localhost
 
 - name: Get facts by tags
   debug:
