--- a/playbooks/cloud_report_azure.yml
+++ b/playbooks/cloud_report_azure.yml
@@ -1,12 +1,17 @@
 ---
-- name: build report with facts
-  hosts: ansible-1
-  gather_facts: true
-
+- name: retrieve info 
+  hosts: localhost
+  connection: local
   tasks:
     - name: load retrieve info role
       include_role:
         name: "../roles/retrieve_info_azure"
+
+- name: build report with facts
+  hosts: ansible-1
+  gather_facts: true
+  tasks:
+
 
     # - name: build a report
     #   include_role:
