--- a/roles/retrieve_info_azure/tasks/main.yml
+++ b/roles/retrieve_info_azure/tasks/main.yml
@@ -23,17 +23,17 @@
   azure.azcollection.azure_rm_virtualnetwork_info:
   register: azure_networks
 
-- name: print azure_account_info azure_networks
+- name: print azure_networks
   ansible.builtin.debug:
     msg: "{{ azure_networks }}"
 
-- name: List automation account in a resource group
-  azure.azcollection.azure_rm_automationaccount_info:
-  register: automationaccount_info
+- name: get all vms
+  azure.azcollection.azure_rm_virtualmachine_info:
+  register: azure_vms
 
-- name: print automationaccount_info
+- name: print azure_vms
   ansible.builtin.debug:
-    msg: "{{ automationaccount_info }}"
+    msg: "{{ azure_vms }}"
 
 # - name: grab boto version
 #   ansible.builtin.pip:
