--- a/roles/retrieve_info_azure/tasks/main.yml
+++ b/roles/retrieve_info_azure/tasks/main.yml
@@ -1,24 +1,10 @@
 ---
-# - name: loop over all ec2 regins
-#   ansible.builtin.include_tasks:
-#     file: retrieve_info.yml
-#   loop: "{{ ec2_regions }}"
-
-# - name: do the thing
-#   shell: "ls -la /usr/libexec | grep platform-python"
-#   register: output 
-
-# - name: print the thing 
-#   debug:
-#     msg: "{{ output }}"
-
-- name: Get facts for current logged in user
-  azure.azcollection.azure_rm_account_info:
-  register: azure_account_info
-
-- name: print azure_account_info
+- name: Basic usage
   ansible.builtin.debug:
-    msg: "{{ azure_account_info }}"
+    msg:
+      - "'AZURE_CLIENT_ID {{ lookup('ansible.builtin.env', 'AZURE_CLIENT_ID') }}'"
+      - "'AZURE_SUBSCRIPTION_ID {{ lookup('ansible.builtin.env', 'AZURE_SUBSCRIPTION_ID') }}'"
+      - "'AZURE_TENANT {{ lookup('ansible.builtin.env', 'AZURE_TENANT') }}'"
 
 - name: Get list of all regions
   azure.azcollection.azure_rm_resource_info:
