--- a/roles/build_report_azure/tasks/main.yml
+++ b/roles/build_report_azure/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: debug
   debug:
-    var: hostvars[localhost]
+    var: hostvars["localhost"]
 
 - name: install apache
   become: true
