--- a/roles/retrieve_info/tasks/main.yml
+++ b/roles/retrieve_info/tasks/main.yml
@@ -1,16 +1,8 @@
 ---
-# Need to supply one region for the module to work, but it will return all regions
-- name: Get all regions
-  amazon.aws.aws_region_info:
-    region: "us-east-2"
-  register: allregions
-  
-- name: Loop over all ec2 regions
+- name: loop over all ec2 regions
   ansible.builtin.include_tasks:
     file: retrieve_info.yml
-  loop: "{{ allregions.regions }}"
-  loop_control:
-    label: "{{ item.region_name }}"
+  loop: "{{ ec2_regions }}"
 
 - name: grab boto version
   ansible.builtin.pip:
