cleaning up flow to support S3

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "githubPullRequests.ignoredPullRequestBranches": [
         "master"
-    ]
+    ],
+    "ansible.python.interpreterPath": "/usr/local/bin/python3"
 }
