--- a/playbooks/aws_resources.yml
+++ b/playbooks/aws_resources.yml
@@ -10,7 +10,7 @@
         name: "ansible-demo"
       register: create_key
 
-    - name: save private key
+    - name: Save private key
       ansible.builtin.copy:
         content: "{{ create_key.key.private_key }}"
         dest: "ansible-demo.pem"
@@ -79,7 +79,7 @@
       until: create_subnet is not failed
       retries: 15
 
-    - name: vpc internet gateway is present for {{ create_vpc.vpc.id }}
+    - name: VPC internet gateway is present for {{ create_vpc.vpc.id }}
       amazon.aws.ec2_vpc_igw:
         region: "{{ ec2_region | default('us-east-1') }}"
         vpc_id: "{{ create_vpc.vpc.id }}"
@@ -90,7 +90,7 @@
       until: igw is not failed
       retries: 15
 
-    - name: vpc public subnet route table is present for {{ create_vpc.vpc.id }}
+    - name: VPC public subnet route table is present for {{ create_vpc.vpc.id }}
       amazon.aws.ec2_vpc_route_table:
         region: "{{ ec2_region | default('us-east-1') }}"
         vpc_id: "{{ create_vpc.vpc.id }}"
@@ -99,7 +99,6 @@
         routes:
           - dest: 0.0.0.0/0
             gateway_id: "{{ igw.gateway_id }}"
-        tags:
         tags:
           Name: "{{ ec2_name_prefix | default('ansible-demo') }}"
           ansible: "is awesome"
