--- a/roles/template/tasks/main.yml
+++ b/roles/template/tasks/main.yml
@@ -3,6 +3,6 @@
   become: true
   ansible.builtin.template:
     src: report.j2
-    dest: index.html"
+    dest: "{{ playbook_dir }}/index.html"
   delegate_to: localhost
   run_once: true
