--- a/playbooks/cloud_report.yml
+++ b/playbooks/cloud_report.yml
@@ -17,7 +17,7 @@
     #     name: "../roles/build_report_linux"
     #   when: inventory_hostname != 'localhost'
 
-    # - name: Load report to host on AWS S3
-    #   ansible.builtin.include_role:
-    #     name: "../roles/build_report_s3"
-    #   when: inventory_hostname == 'localhost'
+    - name: Load report to host on AWS S3
+      ansible.builtin.include_role:
+        name: "../roles/build_report_s3"
+      when: inventory_hostname == 'localhost'
