adding policy to see report

--- a/roles/build_report_s3/tasks/main.yml
+++ b/roles/build_report_s3/tasks/main.yml
@@ -4,6 +4,7 @@
     name: "{{ reports_aws_bucket_name }}"
     region: "{{ reports_aws_region }}"
     state: present
+    policy: "{{ lookup('ansible.builtin.template', 'policy.json') }}"
     public_access:
       block_public_acls: false
       block_public_policy: false
