--- a/roles/retrieve_info/tasks/retrieve_info.yml
+++ b/roles/retrieve_info/tasks/retrieve_info.yml
@@ -17,6 +17,14 @@
   register: igw_info
   delegate_to: localhost
 
+- name: Retrieve info for the EC2 instances
+  amazon.aws.ec2_instance_info:
+    region: "{{ item }}"
+    filters:
+      instance-state-name: running
+      "tag:bluewave": "hichamrocks"
+  register: ec2_instance_info
+
 # Dashes are not allowed as Ansible var names so we use underscores _
 - name: Set facts all info for {{ item }}
   set_fact:
@@ -24,7 +32,8 @@
       vpc_info:  '{{ vpc_info }}'
       ec2_instance_info: '{{ ec2_instance_info }}'
       igw_info: '{{ igw_info }}'
+      instance_info: "{{ instance_info}}"
 
-- name: Set facts all info for {{ item }} 
+- name: Set facts all info for {{ item }}
   set_fact:
     all_ec2_regions: "{{ all_ec2_regions | default ([]) + [{ item|replace('-','_'): hostvars[inventory_hostname][item|replace('-','_')]}] }}"
