--- a/roles/build_report_s3/tasks/main.yml
+++ b/roles/build_report_s3/tasks/main.yml
@@ -33,6 +33,7 @@
     object: "css/main.css"
     src: "css/main.css"
     mode: put
+    force: true
 
 - name: Put index.html
   amazon.aws.s3_object:
