fixing the way css is handled

--- a/roles/build_report_s3/tasks/main.yml
+++ b/roles/build_report_s3/tasks/main.yml
@@ -19,7 +19,7 @@
 - name: Put website files
   community.aws.s3_sync:
     bucket: "{{ reports_aws_bucket_name }}"
-    file_root: "{{ role_path }}/files"
+    file_root: "{{ playbook_dir }}/files"
     region: "{{ reports_aws_region }}"
 
 - name: Get bucket objects
@@ -27,13 +27,13 @@
     bucket_name: "{{ reports_aws_bucket_name }}"
   register: bucket_objects
 
-- name: Put css file
-  amazon.aws.s3_object:
-    bucket: "{{ reports_aws_bucket_name }}"
-    object: "css/main.css"
-    src: "css/main.css"
-    mode: put
-    force: true
+# - name: Put css file
+#   amazon.aws.s3_object:
+#     bucket: "{{ reports_aws_bucket_name }}"
+#     object: "css/main.css"
+#     src: "css/main.css"
+#     mode: put
+#     force: true
 
 - name: Put index.html
   amazon.aws.s3_object:
