--- a/roles/template/tasks/main.yml
+++ b/roles/template/tasks/main.yml
@@ -6,3 +6,13 @@
     dest: "{{ playbook_dir }}/index.html"
   delegate_to: localhost
   run_once: true
+
+- name: Copy CSS and pictures
+  become: true
+  ansible.builtin.copy:
+    src: "{{ role_path }}/files"
+    dest: "{{ playbook_dir }}"
+    directory_mode: '0755'
+    remote_src: yes
+  delegate_to: localhost
+  run_once: true
