--- a/roles/retrieve_aws_instances_info/tasks/main.yml
+++ b/roles/retrieve_aws_instances_info/tasks/main.yml
@@ -2,3 +2,8 @@
 - name: Check Services
   ansible.builtin.service_facts:
   register: service_facts
+
+- name: Check if /etc/motd file exists
+  ansible.builtin.stat:
+    path: /etc/motd
+  register: motd_file
