--- a/roles/retrieve_aws_instances_info/tasks/main.yml
+++ b/roles/retrieve_aws_instances_info/tasks/main.yml
@@ -7,3 +7,7 @@
   ansible.builtin.stat:
     path: /etc/motd
   register: motd_file
+
+- name: Check if selinux is enabled
+  ansible.builtin.command: getenforce
+  register: selinux_status
