--- a/roles/retrieve_aws_instances_info/tasks/main.yml
+++ b/roles/retrieve_aws_instances_info/tasks/main.yml
@@ -22,6 +22,7 @@
     filters:
       "network-interface.private-ip-address": "{{ ansible_default_ipv4.address }}"
   register: ec2_info
+  delegate_to: localhost
 
 - name: Print out instance EC2 facts
   ansible.builtin.debug:
