--- a/playbooks/aws_resources.yml
+++ b/playbooks/aws_resources.yml
@@ -28,7 +28,8 @@
           ssh_key_data: "{{ lookup('file', 'ansible-demo.pem') }}"
         controller_username: "{{ controller_username | default('admin') }}"
         controller_password: "{{ controller_password | default('ansible123!') }}"
-        controller_host: "{{ controller_host | default('https://host.containers.internal/') }}"
+#        controller_host: "{{ controller_host | default('https://host.containers.internal/') }}"
+        controller_host: "{{ controller_host | default('https://localhost/') }}"
         validate_certs: false
 
     - name: Create AWS VPC {{ ec2_name_prefix }}-vpc
