--- a/playbooks/aws_resources.yml
+++ b/playbooks/aws_resources.yml
@@ -17,20 +17,20 @@
         mode: '0400'
       when: create_key.changed
 
-#     - name: Add machine credential
-#       ansible.controller.credential:
-#         name: "RHEL on AWS - SSH KEY"
-#         description: "Machine Credential for AWS instances"
-#         organization: "{{ organization | default('Default') }}"
-#         credential_type: Machine
-#         inputs:
-#           username: ec2-user
-#           ssh_key_data: "{{ lookup('file', 'ansible-demo.pem') }}"
-#         controller_username: "{{ controller_username | default('admin') }}"
-#         controller_password: "{{ controller_password | default('ansible123!') }}"
-# #        controller_host: "{{ controller_host | default('https://host.containers.internal/') }}"
-#         controller_host: "{{ controller_host | default('https://localhost/') }}"
-#         validate_certs: false
+    - name: Add machine credential
+      ansible.controller.credential:
+        name: "RHEL on AWS - SSH KEY"
+        description: "Machine Credential for AWS instances"
+        organization: "{{ organization | default('Default') }}"
+        credential_type: Machine
+        inputs:
+          username: ec2-user
+          ssh_key_data: "{{ lookup('file', 'ansible-demo.pem') }}"
+        controller_username: "{{ controller_username | default('admin') }}"
+        controller_password: "{{ controller_password | default('ansible123!') }}"
+#        controller_host: "{{ controller_host | default('https://host.containers.internal/') }}"
+        controller_host: "{{ controller_host | default('https://localhost/') }}"
+        validate_certs: false
 
     - name: Create AWS VPC {{ ec2_name_prefix }}-vpc
       amazon.aws.ec2_vpc_net:
@@ -57,7 +57,7 @@
         rules:
           - proto: tcp
             ports:
-              -22
+              - 22
             cidr_ip: 0.0.0.0/0
           - proto: tcp
             ports:
