--- a/playbooks/aws_resources.yml
+++ b/playbooks/aws_resources.yml
@@ -18,7 +18,7 @@
       when: create_key.changed
 
     - name: Add machine credential
-      ansible.controller.credential:
+      awx.awx.credential:
         name: "RHEL on AWS - SSH KEY"
         description: "Machine Credential for AWS instances"
         organization: "{{ organization | default('Default') }}"
