--- a/playbooks/cloud_report.yml
+++ b/playbooks/cloud_report.yml
@@ -32,5 +32,5 @@
       when: inventory_hostname == 'localhost'
 
     - name: Print all host_vars
-      debug:
+      ansible.builtin.debug:
         var: hostvars
