--- a/roles/build_report_tags/tasks/main.yml
+++ b/roles/build_report_tags/tasks/main.yml
@@ -35,31 +35,54 @@
     region: "{{ reports_aws_region }}"
   register: ec2_instance_info
 
+- name: Ensure build directory exists
+  ansible.builtin.file:
+    path: "{{ playbook_dir }}/.build"
+    state: directory
+  delegate_to: localhost
+  run_once: true
+
+- name: Render tags-report locally
+  ansible.builtin.template:
+    src: tags_report.j2
+    dest: "{{ playbook_dir }}/.build/tag-report.html"
+  delegate_to: localhost
+  run_once: true
+
 - name: Put tags-report
   amazon.aws.s3_object:
     bucket: "{{ reports_aws_bucket_name }}"
     object: tag-report.html
-    content: "{{ lookup('template', 'tags_report.j2') }}"
+    src: "{{ playbook_dir }}/.build/tag-report.html"
     mode: put
     permission: "{{ reports_aws_bucket_permissions }}"
-    content_type: "text/html; charset=utf-8"
-    content_disposition: inline
-    cache_control: "no-cache, no-store, must-revalidate"
+    headers:
+      ContentType: "text/html; charset=utf-8"
+      ContentDisposition: inline
+      CacheControl: "no-cache, no-store, must-revalidate"
 
 - name: Get bucket objects
   amazon.aws.s3_object_info:
     bucket_name: "{{ reports_aws_bucket_name }}"
   register: bucket_objects
 
+- name: Render index locally
+  ansible.builtin.template:
+    src: landing_page.j2
+    dest: "{{ playbook_dir }}/.build/index.html"
+  delegate_to: localhost
+  run_once: true
+
 - name: Put index.html
   amazon.aws.s3_object:
     bucket: "{{ reports_aws_bucket_name }}"
     object: index.html
-    content: "{{ lookup('template', 'landing_page.j2') }}"
+    src: "{{ playbook_dir }}/.build/index.html"
     mode: put
     permission: "{{ reports_aws_bucket_permissions }}"
-    content_type: "text/html; charset=utf-8"
-    content_disposition: inline
+    headers:
+      ContentType: "text/html; charset=utf-8"
+      ContentDisposition: inline
 
 - name: Print bucket url
   ansible.builtin.debug:
